2004-05-12  Pino Toscano <toscano.pino@tiscali.it>

	* Now circles can display their equation in the form
	"( x - x0 )^2 + ( y - y0 )^2 = r^2".

	* Add Doxygen comments for AngleImp, VectorImp and ArcImp
	classes, to make them documented in scripting-api documentation.

	* Add a Copy action to text labels to copy their text ( with
	substitutions already made ) into the clipboard.

	* Add two little kfile plugins: kfile_kig and kfile_drgeo.

	* Various little improvements

2004-05-11  Dominique Devriese  <devriese@kde.org>

	* Rename the two Transformation::scaling functions to
	scalingOverPoint and scalingOverLine, and export them to python.

	* Fix a crash reported by Maurizio: when debugging is enabled, and
	one attempts to move an object of a type that inherits
	ObjectABType, and depends on a non-movable object.

2004-05-03  Dominique Devriese  <devriese@kde.org>

	* Add a DrGeo test file using a locus

2004-05-03  Pino Toscano <toscano.pino@tiscali.it>

	* More work on Dr. Geo filter: now locuses should work, fix object
	visibility.

2004-04-30  Pino Toscano <toscano.pino@tiscali.it>

	* Add line and half-line by vector.

	* More work on Dr. Geo filter to support some types of On_curve
	points.

2004-04-30  Dominique Devriese  <devriese@kde.org>

	* properly generate python error output for compile errors.

	* make touch screens work by placing a mouseMoved call aboove
	every mouseClicked call.

2004-04-28  Dominique Devriese  <devriese@kde.org>

	* change the Qt CapStyle used for drawing locuses, conics and
	lines to FlatCap, which gives better results with large line
	widths.

	* Add two line styles: DashDotLine and DashDotDotLine

	* Remove the KigPainter::drawConic and KigPainter::drawCubic
	functions.  Conics and cubics are now drawn with the generic
	KigPainter::drawCurve function.  The performance penalty is not
	noticable for me, and I haven't been able to quantify it in any
	way, so I assume it negligible.  Cubics and conics drawing now