@@ -50,9 +50,10 @@ public:
   virtual CurveImp* copy() const = 0;
 
   /**
-   * Return whether this Curve contains the given point.   This should
-   * be a numerical approximation of course.  You can/should use the value
-   * test_threshold in common.h as a threshold value.
+   * Return whether this Curve contains the given point.  This is
+   * implemented as a numerical approximation.  Implementations
+   * can/should use the value test_threshold in common.h as a
+   * threshold value.
    */
   virtual bool containsPoint( const Coordinate& p, const KigDocument& ) const = 0;
 };
