@@ -1,3 +1,8 @@
+2004-05-15  Dominique Devriese  <devriese@kde.org>
+
+	* Intersecting with a segment only gives points that really are on
+	the segment, and an InvalidImp in other cases.
+
 2004-05-12  Pino Toscano <toscano.pino@tiscali.it>
 
 	* Now circles can display their equation in the form
